# cse2215-cg-2025

./: .gitignore  README.md
assignment1/: practical.html
assignment1/data/: prism_vertices  triangle  vectors_mul
assignment1/src/linear/: draw.cpp  linear.h  main.cpp
assignment1/tests/: CMakeLists.txt
assignment1/tests/cpp/: cpp_tests.h  main.cpp
assignment2/: practical.html
assignment2/amusement_park/: CMakeLists.txt
assignment2/amusement_park/data/: topspin_supports.mtl
assignment2/amusement_park/src/: your_code_here_amusement_park.h
assignment2/maze/data/: License.txt
assignment2/maze/src/: maze.h  sprite.cpp  sprite.h  your_code_here_maze.h
assignment2/tests/src/: reference.h
assignment3/: CMakeLists.txt  assignment.html
assignment3/src/: common.h  draw.cpp  your_code_here.h
assignment3/tests/: CMakeLists.txt  your_tests.cpp
assignment4/: CMakeLists.txt  assignment.html
assignment4/src/: CMakeLists.txt  draw.cpp  draw.h  game.h  main.cpp  pacman.cpp  pacman.h  ray_tracing.cpp  ray_tracing.h
assignment4/tests/: CMakeLists.txt  intersect_scene.cpp  reference_pacman.h  tests.cpp  your_tests.cpp
assignment4/tests/data/: cube.mtl
assignment4/tests/data/test-gt/: test-AABBs  test-cube  test-dragon  test-mixed  test-spheres  test-triangle
assignment5/: CMakeLists.txt  assignment.html
assignment5/src/: CMakeLists.txt  bvh.cpp  bvh.h  bvh_interface.h  common.h  draw.cpp  draw.h  intersect.h  main.cpp  scene.cpp  scene.h
assignment5/tests/: CMakeLists.txt  acceleration_data_structure_1.cpp  acceleration_data_structure_2.cpp  bvh_ref.h  util.h  your_tests.cpp
cpp_test/: hello
exam-practice/MockExamPacman/: CMakeLists.txt
exam-practice/MockExamPacman/src/: CMakeLists.txt  main.cpp  provided.h  your_code.cpp  your_code.h
exam-practice/stonehenge/: CMakeLists.txt
exam-practice/stonehenge/src/: library.cpp  solution.cpp
final_project/: CMakeLists.txt  assignment.html
final_project/src/: bvh.cpp  bvh.h  bvh_interface.h  common.h  config.cpp  config.h  draw.cpp  draw.h  extra.cpp  light.cpp  main.cpp  recursive.cpp  render.cpp  render.h  scene.cpp  shading.cpp  shading.h  texture.cpp  verification.cpp
final_project/tests/: CMakeLists.txt
final_project/tests/include/: InvisibleWindow.cpp  InvisibleWindow.h  ostream_custom.h  solution.h  tests.h  timer.h  uniform_tests.h  unit_sphere.h
final_project/tests/include/ref/: bvh.h  lights_scene.h  sampler.h
final_project/tests/src/: interpolation.cpp  lights_and_shadows.cpp  multisampling.cpp  recursive_ray_reflections.cpp  recursive_ray_transparency.cpp  shading_models.cpp  texture_mapping.cpp
practical1/: CMakeLists.txt
practical1/data/: pointplane  triangleArea
practical1/framework/src/: mesh.cpp
practical1/src/cpp/: main.cpp
practical1/tests/cpp/: helpers.h
practical2/: CMakeLists.txt
practical2/amusement_park/data/: topspin_arms.mtl  topspin_seats.mtl
practical2/amusement_park/src/: main.cpp  your_code_here_amusement_park.h
practical2/maze/: CMakeLists.txt
practical2/maze/src/: main.cpp  maze.cpp  your_code_here_maze.h
practical2/tests/: CMakeLists.txt
practical2/tests/src/: amusement_park.cpp  maze.cpp
practical3/src/: CMakeLists.txt  draw.h  main.cpp  your_code_here.h
practical3/tests/: helpers.h  reference.h  tests.cpp
practicalLACPP/data/: cube  matrix_determinant  matrix_inverse  matrix_mul  matrix_transpose  nGon  prism  vectors_cross  vectors_dot  vectors_length
practicalLACPP/framework/src/: trackball.cpp
practicalLACPP/src/cpp/: your_code_here.h
practicalLACPP/src/linear/: draw.h  main.cpp  your_code_here.cpp
practicalLACPP/tests/cpp/: CMakeLists.txt
practicalLACPP/tests/linear/: CMakeLists.txt  helpers.h  main.cpp  nGonArea_tests.h  nGonOrder_tests.h  solid_tests.h  vector_matrix_tests.h
startup_check/: CMakeLists.txt  description.html
startup_check/framework/include/framework/: glm_ostream.h
startup_check/src/: main.cpp
