if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/reference_pacman.cpp")
    if (WIN32)
        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/prebuilt/win_x64")
    elseif (APPLE)
        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/prebuilt/macos_arm64")
    else()
        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/prebuilt/linux_x64")
    endif()
    add_library(Pacman_Reference STATIC reference_pacman.cpp)
    target_link_libraries(Pacman_Reference PUBLIC CGFramework)
    target_compile_features(Pacman_Reference PUBLIC cxx_std_20)
    set_project_warnings(Pacman_Reference)
    enable_sanitizers(Pacman_Reference)
else()
    add_library(Pacman_Reference STATIC IMPORTED)
    if (WIN32)
        set_target_properties(Pacman_Reference PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/prebuilt/win_x64/Pacman_Reference.lib")
    elseif (APPLE)
        set_target_properties(Pacman_Reference PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/prebuilt/macos_arm64/libPacman_Reference.a")
    else()
        set_target_properties(Pacman_Reference PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/prebuilt/linux_x64/libPacman_Reference.a")
    endif()
endif()

add_executable(Bachelor_Practical4_Tests "tests.cpp")
target_link_libraries(Bachelor_Practical4_Tests PRIVATE CGFramework Bachelor_Practical4_Assignment4Lib Catch2WithMain PUBLIC Pacman_Reference)
target_compile_features(Bachelor_Practical4_Tests PRIVATE cxx_std_20)
enable_sanitizers(Bachelor_Practical4_Tests)
set_project_warnings(Bachelor_Practical4_Tests)
add_test(NAME Bachelor_Practical4_Tests COMMAND Bachelor_Practical4_Tests)

get_filename_component(DATA_DIR "${CMAKE_CURRENT_LIST_DIR}/data/" ABSOLUTE)
get_filename_component(TEST_DIR "${CMAKE_CURRENT_LIST_DIR}/data/test-gt" ABSOLUTE)
target_compile_definitions(Bachelor_Practical4_Tests PRIVATE "-DDATA_DIR=\"${DATA_DIR}\"" "-DTESTS_DIR=\"${TEST_DIR}\"")

add_executable(Bachelor_Practical4_YourTests "your_tests.cpp")
target_compile_features(Bachelor_Practical4_YourTests PRIVATE cxx_std_20)
target_link_libraries(Bachelor_Practical4_YourTests PRIVATE CGFramework Bachelor_Practical4_Assignment4Lib Catch2WithMain PUBLIC Pacman_Reference)
enable_sanitizers(Bachelor_Practical4_YourTests)
set_project_warnings(Bachelor_Practical4_YourTests)
add_test(NAME Bachelor_Practical4_YourTests COMMAND Bachelor_Practical4_YourTests)
